src/test/ui/closures/2229_closure_analysis/diagnostics/closure-origin-single-variant-diagnostics.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/closure-origin-single-variant-diagnostics.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

warning: irrefutable if-let pattern
  --> $DIR/closure-origin-single-variant-diagnostics.rs:18:9
   |
LL | /         if let SingleVariant::Point(ref mut x, _) = point {
LL | |
LL | |             *x += 1;
LL | |         }
   | |_________^
   |
   = note: `#[warn(irrefutable_let_patterns)]` on by default

error[E0382]: use of moved value: `c`
  --> $DIR/closure-origin-single-variant-diagnostics.rs:25:13
   |
LL |     let b = c;
   |             - value moved here
LL |     let a = c;
   |             ^ value used here after move
   |
note: closure cannot be moved more than once as it is not `Copy` due to moving the variable `point.0` out of its environment
  --> $DIR/closure-origin-single-variant-diagnostics.rs:18:53
   |
LL |         if let SingleVariant::Point(ref mut x, _) = point {
   |                                                     ^^^^^

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0382`.
